# SE_terminal

./: .env.example  .gitignore  Architecture.docx  Assignment 5.docx  CMakeLists.txt  DataAccessLayer.cpp  DataAccessLayer.h  How_to_Run.txt  LICENSE  LocalLLMService.cpp  LocalLLMService.h  MainWindow.cpp  MainWindow.h  QUICKSTART.md  README.md  SafetyFilter.h  TerminalHighlighter.cpp  TerminalHighlighter.h  TerminalUI.cpp  TerminalUI.h  TestSuite.cpp  TestSuite.h  UML_Diagram  USAGE.md  clean.sh  command_executor.py  dal_test_runner.cpp  database_schema.sql  llm_handler.py  main.cpp  main.py  run.sh  safety_filter.h  safety_filter.py  session_logger.py  terminal_app.db  terminal_gui.py  test_blackbox_flow.db  test_components.py  test_consolidated.db  (+7 more)
